--- a/package.json
+++ b/package.json
@@ -5,7 +5,9 @@
     "main": "index.js",
     "scripts": {
         "build": "webpack -p",
-        "start": "webpack-dev-server --open"
+        "start": "webpack-dev-server --open",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -d build"
     },
     "keywords": [],
     "author": "",
@@ -31,6 +33,7 @@
         "eslint-plugin-promise": "^4.2.1",
         "eslint-plugin-react": "^7.21.5",
         "file-loader": "^6.1.1",
+        "gh-pages": "^3.1.0",
         "html-webpack-plugin": "^4.5.0",
         "mini-css-extract-plugin": "^1.1.0",
         "npm-run-all": "^4.1.5",
